# models/income.go
@@ -8,21 +8,21 @@ import (
 
 // Income defines model for Income.
 type Income struct {
-	IsActive     bool               `json:"is_active,omitempty"`
+	IsActive     bool               `json:"isActive,omitempty"`
 	Amount       int                `json:"amount,omitempty"`
 	Comment      *string            `json:"comment,omitempty"`
-	CreatedAt    time.Time          `json:"created_at,omitempty"`
+	CreatedAt    time.Time          `json:"createdAt,omitempty"`
 	ID           openapitypes.UUID  `json:"id,omitempty"`
-	UserID       openapitypes.UUID  `json:"user_id,omitempty"`
-	ActivePassID *openapitypes.UUID `json:"active_pass_id,omitempty" gorm:"size:255"`
-	ActivePass   *ActivePass        `json:"active_pass,omitempty" gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
-	ServiceID    *openapitypes.UUID `json:"service_id,omitempty" gorm:"size:255"`
+	UserID       openapitypes.UUID  `json:"userID,omitempty"`
+	ActivePassID *openapitypes.UUID `json:"activePassID,omitempty" gorm:"size:255"`
+	ActivePass   *ActivePass        `json:"activePass,omitempty" gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
+	ServiceID    *openapitypes.UUID `json:"serviceID,omitempty" gorm:"size:255"`
 	Service      *Service           `json:"service,omitempty" gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
-	UpdatedAt    time.Time          `json:"updated_at,omitempty"`
-	PayerID      openapitypes.UUID  `json:"payer_id,omitempty" gorm:"size:255"`
+	UpdatedAt    time.Time          `json:"updatedAt,omitempty"`
+	PayerID      openapitypes.UUID  `json:"payerID,omitempty" gorm:"size:255"`
 	User         User               `json:"user,omitempty" gorm:"foreignKey:PayerID;;references:ID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
 	Name         *string            `json:"name,omitempty"`
-	IsPaid       bool               `json:"is_paid,omitempty"`
+	IsPaid       bool               `json:"isPaid,omitempty"`
 }
 
 // IncomeCreate defines model for IncomeCreate.
@@ -30,12 +30,12 @@ type IncomeCreate struct {
 	Name         *string            `json:"name"`
 	Amount       int                `json:"amount"`
 	Comment      *string            `json:"comment,omitempty"`
-	UserID       openapitypes.UUID  `json:"user_id"`
-	ActivePassID *openapitypes.UUID `json:"active_pass_id,omitempty"`
-	ServiceID    *openapitypes.UUID `json:"service_id,omitempty"`
-	PayerID      openapitypes.UUID  `json:"payer_id"`
-	CreatedAt    *time.Time         `json:"created_at,omitempty"`
-	IsPaid       *bool              `json:"is_paid,omitempty"`
+	UserID       openapitypes.UUID  `json:"userID"`
+	ActivePassID *openapitypes.UUID `json:"activePassID,omitempty"`
+	ServiceID    *openapitypes.UUID `json:"serviceID,omitempty"`
+	PayerID      openapitypes.UUID  `json:"payerID"`
+	CreatedAt    *time.Time         `json:"createdAt,omitempty"`
+	IsPaid       *bool              `json:"isPaid,omitempty"`
 }
 
 // IncomeCreateMultipleUsers defines model for IncomeCreateMultipleUsers.
@@ -55,9 +55,9 @@ type IncomeUpdate struct {
 	Name         *string            `json:"name,omitempty"`
 	Amount       *int               `json:"amount,omitempty"`
 	Comment      *string            `json:"comment,omitempty"`
-	ActivePassID *openapitypes.UUID `json:"active_pass_id,omitempty"`
-	ServiceID    *openapitypes.UUID `json:"service_id,omitempty"`
-	PayerID      *openapitypes.UUID `json:"payer_id,omitempty"`
-	CreatedAt    *time.Time         `json:"created_at,omitempty"`
-	IsPaid       *bool              `json:"is_paid,omitempty"`
+	ActivePassID *openapitypes.UUID `json:"activePassID,omitempty"`
+	ServiceID    *openapitypes.UUID `json:"serviceID,omitempty"`
+	PayerID      *openapitypes.UUID `json:"payerID,omitempty"`
+	CreatedAt    *time.Time         `json:"createdAt,omitempty"`
+	IsPaid       *bool              `json:"isPaid,omitempty"`
 }
